fix: resolve update conflicts and clarify TUI mode usage
Changes:
- Add config/mitre_attack.json and data/schemas/ to .gitignore
- Update script now cleans up untracked files before merge
- Clarify --mode tui syntax in README (double dashes required)
- Prevents merge conflicts when running update on already-installed systems

--- a/.gitignore
+++ b/.gitignore
@@ -38,8 +38,11 @@ data/reports/*
 data/*.db
 data/cve_cache.json
 data/timelines/*.json
+data/schemas/*.json
 *.sqlite
 *.sqlite3
+config/mitre_attack.json
+config/mitre_attack_*.json
 
 # Packages
 *.deb
